--- a/Chat/index.html
+++ b/Chat/index.html
@@ -13,6 +13,8 @@
 
 <article id="chat">
     <section id="alice">
+        <h2>Alice</h2>
+        <hr />
         <div id="alice-messages-list" class="messages"></div>
 
         <hr />
@@ -24,6 +26,8 @@
     </section>
 
     <section id="bob">
+        <h2>Bob</h2>
+        <hr />
         <div id="bob-messages-list" class="messages"></div>
 
         <hr />
